2002-11-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-goto-url): Use an optional argument and the function
	`interactive' to examine whether it is called interactively
	instead of the function `interactive-p'.
	Suggested by TSUCHIYA Masatoshi.
	(w3m-goto-url-new-session): Ditto.
	(w3m): Ditto.
	(w3m-select-buffer-show-this-line): Ditto.

2002-11-14  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-w3m-attributes): Bind `case-fold-search' to t.

2002-11-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-search.el (w3m-search-engine-alist): Add some dictionaries.
	(w3m-search-default-engine): Default to google.
	(w3m-search-quick-search-engine-alist): Add iij-archie; add
	customization type.
	(w3m-search-prefer-japanese-site): New user option.
	(w3m-search-inhibited-japanese-engines): New user option.
	(w3m-search-quick-search-engines): New function.
	(w3m-search-quick-search-handler): Maybe use a Japanese site; use
	`w3m-search-quick-search-engines' to merge
	`w-s-engine-alist' and `w-s-quick-search-engine-alist'.

	* w3m.el (w3m): Allow quicksearch urls if interactive.

2002-11-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3.el (w3m-view-this-url-1): Copy `w3m-current-url' into a
	copied buffer.
	(w3m-goto-url): Allow the 7th argument `qsearch'; use it to
	recursive call the function itself if the quicksearch feature is
	permitted.
	(w3m-goto-url-new-session): Specify the 7th arg of `w3m-goto-url'
	if it is called interactively.

2002-11-08  Romain FRANCOISE  <romain@orebokech.com>

	* w3m-search.el (w3m-search-engine-alist): Add "google groups".
	(w3m-search-quick-search-engine-alist): New user option.
	(w3m-search-quick-search-handler): New function.

	* w3m.el: Autoload `w3m-search-quick-search-handler'.
	(w3m-goto-url): Use `w3m-search-quick-search-handler' to parse
	quicksearch url schemes.

2002-11-06  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-palmfan.el (shimbun-palmfan-date-regexp): Updated.