@@ -1,3 +1,8 @@
+2002-11-17  Hideyuki SHIRAI  <shirai@meadowy.org>
+
+	* mew-w3m.el (mew-mime-text/html-w3m): Remove any properties of
+	`xref'.
+
 2002-11-15  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m.el (w3m-goto-url): Use an optional argument and the function
